--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
