--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.4.0",
     "formik": "^2.4.3",
     "framer-motion": "^10.15.1",
+    "js-cookie": "^3.0.5",
     "json-server": "^0.17.3",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
